<resources>
    <string name="app_name">HuellaPP</string>
    <string name="logo_app">Logo de la aplicación</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="subir_foto">Subir foto</string>
    <string name="admin_avatar">Avatar del Administrador</string>
    <string name="active_icon">Icono Activo</string>
    <string name="calendar_icon">Icono Calendario</string>
    <string name="paw_icon">🐾</string>
    <string name="users_icon">👤</string>
    <string name="pets_icon">🐶</string>


    <string name="app_logo">Logo de la aplicación</string>
    <string name="decoration">Decoración</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="register_subtitle">Únete a miles de usuarios satisfechos</string>
    <string name="name">Nombre completo</string>
    <string name="email">Correo electrónico</string>
    <string name="location">Ciudad o país</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="register">COMENZAR</string>
    <string name="or">O continúa con</string>
    <string name="already_have_account">¿Ya tienes una cuenta?</string>
    <string name="login">Inicia sesión</string>
    <string name="toggle_password">Mostrar/Ocultar contraseña</string>
    <string name="google_login">Continuar con Google</string>
    <string name="facebook_login">Continuar con Facebook</string>
    <string name="apple_login">Continuar con Apple</string>
    <string name="icon">Icon</string>
    <string name="close">Close</string>

    <!-- Personal Information Card -->
    <string name="personal_information">Información Personal</string>
    <string name="btn_edit_profile">Editar</string>
    <string name="hint_full_name">Nombre completo</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_birth_date">Fecha de nacimiento</string>
    <string name="sample_name">Juan Pérez García</string>
    <string name="sample_phone">+1 (829) 555-0123</string>


    <string name="profile_picture">Foto de perfil</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="two_factor">Verificación en dos pasos</string>
    <string name="notifications">Notificaciones</string>
    <string name="dark_mode">Tema oscuro</string>
    <string name="arrow">Flecha</string>


    <string name="pet_image">Imagen de mascota</string>
    <string name="add_favorite">Agregar a favoritos</string>
    <string name="back">Regresar</string>
    <string name="age">Edad</string>
    <string name="gender">Género</string>
    <string name="weight">Peso</string>

    <string name="about_pet">Sobre la mascota</string>
    <string name="shelter">Refugio</string>
    <string name="shelter_contact">Contacto del refugio</string>
    <string name="call">Llamar</string>
    <string name="adoption_requirements">Requisitos de adopción</string>
    <string name="requirement">Requisito</string>
    <string name="req_age">Ser mayor de 18 años</string>
    <string name="req_space">Tener espacio adecuado</string>
    <string name="req_commitment">Compromiso a largo plazo</string>
    <string name="req_documents">Documentación de identidad</string>
    <string name="adopt_now">Adoptar ahora</string>


    <string name="adoption">Adopción</string>
    <string name="adoption_form_title">Solicitud de Adopción</string>
    <string name="adoption_form_subtitle">Completa el formulario para adoptar a esta mascota</string>
    <string name="full_name">Nombre completo</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="previous_pets_question">¿Has tenido mascotas antes?</string>
    <string name="adequate_space_question">¿Tienes espacio adecuado?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="additional_comments">Comentarios adicionales (opcional)</string>
    <string name="accept_terms">Acepto los términos y condiciones de adopción</string>
    <string name="cancel">Cancelar</string>
    <string name="submit_adoption">Enviar Solicitud</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>